--- a/admin/index.html
+++ b/admin/index.html
@@ -10,5 +10,25 @@
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^0.3/dist/cms.js"></script>
+  <script>
+      var PostPreview = createClass({
+      render: function() {
+        var entry = this.props.entry;
+        var image = entry.getIn(['data', 'image']);
+        var bg = image && this.props.getAsset(image);
+        return h('div', {},
+          h('div', {className: "cover"},
+            h('h1', {}, entry.getIn(['data', 'title'])),
+            bg ? h('img', {src: bg.toString()}) : null
+          ),
+          h('p', {},
+            h('small', {}, "Written " + entry.getIn(['data', 'date']))
+          ),
+          h('div', {"className": "text"}, this.props.widgetFor('body'))
+        );
+      }
+    });
+    CMS.registerPreviewTemplate("posts", PostPreview);
+  </script>
 </body>
 </html>
