--- a/admin/index.html
+++ b/admin/index.html
@@ -28,7 +28,7 @@
         );
       }
     });
-    CMS.registerPreviewTemplate("posts", PostPreview);
+    CMS.registerPreviewTemplate("post", PostPreview);
   </script>
 </body>
 </html>
